public/css/dark-mode.css
@media (prefers-color-scheme: dark) {
	.modal-inner {
		background-color: black;
	}

	.sound-btn {
		filter: invert(100);
	}

	.sound-btn:hover {
		filter: brightness(0) saturate(100%) invert(79%) sepia(14%) saturate(4587%)
			hue-rotate(326deg) brightness(82%) contrast(85%);
	}

	select.username-select {
		background-color: black;
		color: white;
	}

	p,
	span,
	h1,
	h2,
	h3,
	tr,
	a.current,
	div.privacy,
	div.id-container span,
	div.price-container span,
	div.item-text span.versions,
	td a.header,
	div.move-details div,
	label,
	legend,
	input[type="radio"]:disabled + label::before,
	li {
		color: white !important;
	}

	div.notification p {
		color: black !important;
	}

	div.notification {
		border: 2px solid black !important;
	}

	input {
		background-color: black;
		color: white;
	}
}

